Fixed small bugs

--- a/html/http_sse.html
+++ b/html/http_sse.html
@@ -3,70 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <title>Robot Control</title>
-</head>
-<body>
-<h2 id="state">Undefined</h2>
+    <script>
+        let fetching = false;
+        let source = null;
 
-<button onclick="send_up()">UP</button>
-<button onclick="send_down()">DOWN</button>
-
-<h2 id="oc">unknown</h2>
-
-<script>
-    let out = document.getElementById("state");
-    let oc = document.getElementById("oc");
-
-    function send_up() {
-        fetch('/send?+10').then(res => {
-            return console.log(res);
-        });
-    }
-
-    function send_down() {
-        fetch('/send?-10').then(res => {
-            return console.log(res);
-        });
-    }
-
-    let source = new EventSource("/stream");
-    source.onopen = function () {
-        oc.innerText = "open";
-        console.log("OPEN");
-    };
-    source.onerror = function () {
-        oc.innerText = "err";
-        console.log("ERROR");
-    };
-    source.onmessage = function (event) {
-        console.log(event.data.size);
-        out.innerText = event.data
-    }
-
-    document.onkeydown = function (e) {
-        if (!e.repeat) {
-            switch (e.keyCode) {
-                case 37:
-                    // alert('left');
-                    break;
-                case 38:
-                    // alert('up');
-                    fetch('/send?5').then(res => {
-                        return console.log(res);
-                    });
-                    break;
-                case 39:
-                    // alert('right');
-                    break;
-                case 40:
-                    // alert('down');
-                    fetch('/send?-5').then(res => {
-                        return console.log(res);
-                    });
-                    break;
+        function send_up() {
+            if (!fetching) {
+                fetching = true;
+                fetch('/send?+5').then(res => {
+                    fetching = false;
+                    return console.log(res);
+                });
             }
         }
-    }
-</script>
-<h1>Hello world</h1>
+
+        function send_down() {
+            if (!fetching) {
+                fetching = true;
+                fetch('/send?-5').then(res => {
+                    fetching = false;
+
+                    return console.log(res);
+                });
+            }
+        }
+
+        function main() {
+            let out = document.getElementById("state");
+            let oc = document.getElementById("oc");
+
+            source = new EventSource("/stream");
+            console.log("Opened event stream");
+            console.log(source.readyState);
+            source.onopen = function () {
+                oc.innerText = "open";
+                console.log("OPEN");
+            };
+            source.onerror = function () {
+                oc.innerText = "err";
+                console.log("ERROR");
+            };
+            source.onmessage = function (event) {
+                console.log(event.data.size);
+                out.innerText = event.data
+            }
+
+            document.onkeydown = function (e) {
+                if (!e.repeat) {
+                    switch (e.keyCode) {
+                        case 37:
+                            // alert('left');
+                            break;
+                        case 38:
+                            send_up();
+                            break;
+                        case 39:
+                            // alert('right');
+                            break;
+                        case 40:
+                            send_down();
+                            break;
+                    }
+                }
+            }
+        }
+    </script>
+    <style>
+        .max_button {
+            display: block;
+            width: 100%;
+            border: none;
+            /*padding: 14px 28px;*/
+            /*cursor: pointer;*/
+            text-align: center;
+            height: 45%;
+        }
+
+        div {
+            margin: 0;
+            padding: 0;
+        }
+
+        #container {
+            width: 100%;
+            height: 100%;
+            position: fixed;
+        }
+
+        #top {
+            height: 10%;
+        }
+
+        #middle {
+            height: 80%;
+        }
+
+        #bottom {
+            height: 10%;
+        }
+
+    </style>
+
+</head>
+<body>
+<div id="container">
+    <div id="top"><h2 style="text-align:center;" id="state">unknown</h2></div>
+    <div id="middle">
+        <button onclick="send_up()" class="max_button">UP</button>
+        <br/>
+        <button onclick="send_down()" class="max_button">DOWN</button>
+    </div>
+    <div id="bottom"><h2 id="oc">unknown</h2></div>
+</div>
+<script>main();</script>
 </body>
 </html>
